# stocks-study

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  jquants_client.py  main.py  utils.py
backend/app/analysis/: models.py  router.py  technical.py
backend/app/stocks/: models.py  router.py  service.py
backend/tests/: conftest.py  test_api.py  test_jquants_client.py  test_technical.py
data-platform/: pyproject.toml
data-platform/glue/: enrich.py  transform.py
data-platform/lambda/ingest/: handler.py  jquants_fetcher.py  requirements.txt
data-platform/stepfunctions/: pipeline.asl.json
data-platform/tests/: conftest.py  test_enrich.py  test_ingest_handler.py  test_transform.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CandlestickChart.tsx  SearchBar.tsx  StockList.tsx  TechnicalChart.tsx  VolumeChart.tsx
frontend/src/pages/: DashboardPage.tsx  StockDetailPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
terraform/: athena.tf  backend.tf  cloudwatch.tf  eventbridge.tf  glue.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  stepfunctions.tf  variables.tf
