[tool.poetry]
name = "stocks-study-data-platform"
version = "0.1.0"
description = "stocks-study AWSデータプラットフォーム（Lambda, Glue, Step Functions）"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
ta = "^0.11.0"
jquants-api-client = "^2.0.0"
tenacity = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
moto = {extras = ["s3"], version = "^5.0.0"}
ruff = "^0.8.0"
mypy = "^1.13.0"
pandas-stubs = "^2.2.0"
boto3-stubs = {extras = ["s3"], version = "^1.34.0"}
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ta.*", "jquantsapi.*", "awsglue.*", "moto.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
